# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gen_diff/scripts/: gendiff.py
gendiff/: app_logic.py  drills.py  file_ops.py  formatters.py  parsing.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_adjust_output.py  test_compare_dicts.py  test_diff_dict_rep.py  test_diff_jsons.py  test_diff_yamls.py  test_file_not_found.py  test_files_not_found.py  test_help.py  test_parse.py  test_python_to_json.py  test_read_and_check_file_content.py  test_read_and_check_file_contents.py  test_read_and_compare_flat_jsons.py  test_read_and_compare_flat_yamls.py
