[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff Project (Python back-end course)"
authors = ["Oleg Tikhonov <Oleg.Tikhonoff@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ybny0nsr/python-project-50"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Other Audience",
  "Programming Language :: Python :: 3.10",
  "License :: Free For Educational Use",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Topic :: Education :: Testing",
  "Private :: Do Not Upload",
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
